fix(ui): make toasts respect dark mode

--- a/packages/theme/src/themes.module.scss
+++ b/packages/theme/src/themes.module.scss
@@ -3,11 +3,13 @@
 $dark-gray: #303030;
 $medium-gray: #4b4b4b;
 $light-gray: #cccccc;
-$dark-green: #337150;
-$light-green: #65e2a0;
-$yellow: #fffd7b;
-$light-red: #e26565;
 $border-radius: 2px;
+
+$yellow: #fffd7b;
+
+$red-light: #e26565;
+$red-dark: #b74141;
+
 $green-light: #65e2a0;
 $green-dark: #469c6e;
 $green-gradient: linear-gradient(to right, $green-light, $green-dark);
@@ -17,18 +19,22 @@ $themes: (
     background-color: #141516,
     midground-color: #242729,
     accent: $green-light,
+    error: $red-dark,
     foreground-color: #33373a,
     outline-color: #212121,
     text-color: #ffffff,
+    text-color-invert: black,
     shadow: 0px 0px 2px rgba(0, 0, 0, 0.7),
   ),
   light: (
     background-color: #d0d0d0,
     midground-color: white,
     accent: $green-dark,
+    error: $red-light,
     foreground-color: #e8e8e8,
     outline-color: #b9b9b9,
     text-color: #484848,
+    text-color-invert: white,
     shadow: 0px 0px 5px rgba(0, 0, 0, 0.144),
   ),
   pinky: (
